@@ -26,6 +26,7 @@ include $(top_srcdir)/Makefile.rules
 pkginclude_HEADERS = \
 	bfin.h \
 	bitmask.h \
+	bitops.h \
 	bsbit.h \
 	bsdl.h \
 	bsdl_mode.h \
